[package]
name = "hf3fs-meta-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
hf3fs-app.workspace = true
hf3fs-config.workspace = true
hf3fs-logging.workspace = true
hf3fs-memory.workspace = true
hf3fs-meta-service.workspace = true
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
