[package]
name = "hf3fs-analytics"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
chrono.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
