[package]
name = "hf3fs-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types = { workspace = true }
hf3fs-config = { workspace = true }
hf3fs-logging = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
