[package]
name = "hf3fs-chunk-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
serde.workspace = true
dashmap.workspace = true
bytes.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
