[package]
name = "hf3fs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
hf3fs-config.workspace = true
hf3fs-client.workspace = true
hf3fs-proto.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
libc.workspace = true
toml.workspace = true
