[package]
name = "hf3fs-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types = { workspace = true }
hf3fs-config-derive = { workspace = true }
arc-swap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
