[package]
name = "hf3fs-core-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
hf3fs-proto.workspace = true
hf3fs-config.workspace = true
hf3fs-service-derive.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
