[package]
name = "hf3fs-kv-backends"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
rocksdb = []
leveldb = []

[dependencies]
hf3fs-types.workspace = true
hf3fs-kv.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio.workspace = true
