[package]
name = "hf3fs-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
mimalloc = ["dep:mimalloc"]

[dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
mimalloc = { version = "0.1", optional = true }
