[package]
name = "hf3fs-meta-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
hf3fs-proto.workspace = true
hf3fs-kv.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
