[package]
name = "hf3fs-monitor-collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types.workspace = true
hf3fs-monitor.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
