[package]
name = "hf3fs-net-rdma"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Enable actual RDMA support. Requires libibverbs to be installed.
# Without this feature, only the type definitions and stub implementations
# are available.
rdma = []

[dependencies]
hf3fs-types.workspace = true
hf3fs-net.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
