[package]
name = "hf3fs-serde"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types = { workspace = true }
hf3fs-serde-derive = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
crc32c = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
