[package]
name = "hf3fs-storage-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types = { workspace = true }
hf3fs-proto = { workspace = true }
hf3fs-service-derive = { workspace = true }
hf3fs-chunk-engine = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
