[package]
name = "hf3fs-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
num_enum = { workspace = true }
chrono = { workspace = true }
byteorder = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
