[package]
name = "hf3fs-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hf3fs-types = { workspace = true }
crossbeam = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
